objects/ssot__PlanBenefit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitInformationText__c</fullName>
        <label>Benefit Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitNoteText__c</fullName>
        <label>Benefit Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CoinsuranceNoteText__c</fullName>
        <label>Coinsurance Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommunicationEffectiveDate__c</fullName>
        <label>Communication Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CopayNoteText__c</fullName>
        <label>Copay Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeductibleNoteText__c</fullName>
        <label>Deductible Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DocumentLocation__c</fullName>
        <label>Document Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DocumentUrl__c</fullName>
        <label>Document Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EmergencyDepartmentCopayAmount__c</fullName>
        <label>Emergency Department Copay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Plan Benefit Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkCoinsuranceAmount__c</fullName>
        <label>In Network Coinsurance Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkCoinsurancePercent__c</fullName>
        <label>In Network Coinsurance Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkFamilyDeductibleAmount__c</fullName>
        <label>In Network Family Deductible Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkFamilyOutofPocketAmount__c</fullName>
        <label>In Network Family Outof Pocket Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkIndividualDeductibleAmount__c</fullName>
        <label>In Network Individual Deductible Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkLifetimeMembershipMaxAmt__c</fullName>
        <label>In Network Lifetime Membership Max Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNtwkIndividualOutofPocketAmt__c</fullName>
        <label>In Ntwk Individual Outof Pocket Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumLifetimeMembershipNoteText__c</fullName>
        <label>Maximum Lifetime Membership Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkCoinsuranceAmount__c</fullName>
        <label>Outof Network Coinsurance Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkCoinsurancePercent__c</fullName>
        <label>Outof Network Coinsurance Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkFamilyDeductibleAmount__c</fullName>
        <label>Outof Network Family Deductible Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkFamilyOutofPocketAmount__c</fullName>
        <label>Outof Network Family Outof Pocket Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndividualDeductibleAmt__c</fullName>
        <label>Outof Ntwk Individual Deductible Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndividualOutofPocketAmt__c</fullName>
        <label>Outof Ntwk Individual Outof Pocket Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkMaxLifetimeMembershipAmt__c</fullName>
        <label>Outof Ntwk Max Lifetime Membership Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofPocketNoteText__c</fullName>
        <label>Outof Pocket Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlanBenefitStatus__c</fullName>
        <label>PlanBenefitStatus</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryCareCopayAmount__c</fullName>
        <label>Primary Care Copay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PurchaserPlanId__c</fullName>
        <label>Purchaser Plan</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModified__c</fullName>
        <label>Source System Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SpecialistCopayAmount__c</fullName>
        <label>Specialist Copay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UrgentCareCopayAmount__c</fullName>
        <label>Urgent Care Copay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723733827_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PlanBenefit_PurchaserPlanId_map_Purc_rel</label>
        <referenceTo>ssot__PurchaserPlan__dlm</referenceTo>
        <relationshipLabel>PlanBenefit_PurchaserPlanId_map_Purc_rel</relationshipLabel>
        <relationshipName>rel_1716723733827_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>